 * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
 * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
 * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 * 
 * $Id$
 */
 
TreeTank 4.17
-------------
+ Introduced Conventions for IAxis. Generic test case added to test all axis
  for convention compliance. Bug fixed with FullTextAxis.
+ BeanUtil now supporting remove().
+ Added readme.txt to provide authoritative coding conventions.
+ Added reset() to IAxis to allow for NestedAxis.
+ Switched to ISC License.
+ Replaced all axis classes performing tests to generic FilterAxis combined
  with IFilter.
+ Completely switched to unchecked exceptions.
 
TreeTank 4.16
-------------
+ WriteTransaction now threadsafe by enforcing single-writer contract.
+ Auto commit now default. User must no longer call commit. Auto commit
  commits after the modification of some nodes as well as before
  IWriteTransaction.close().
+ Idempotent close operation. Multiple calls do no longer hurt.
+ Added ID annotation for beans.
+ BeanUtil now serializing fields as attributes.
+ Added namespace and attribute getters to IReadTransaction.
+ Support wildcard suffix in FullTextAxis. It is activated by * as last
  character in token.
 
TreeTank 4.15
-------------
+ INode no longer part of public API; replaced by AbstractNode.
+ BeanUtil now supports byte[].
+ No longer make INode public. This lead to a variety of use cases mixing
  pure transaction cursor and node semantics. As a result, nobody really knew
  where the transaction cursor actually resided. These side-effects can be
  clearly avoided by a pure cursor-based approach.
+ Introduce concept of cursor stability: Always leave the cursor of a
  transaction where it was before calling a method except the method explicitly
  modifies the state of the transaction.
+ Moved bean-related stuff to beanlayer package.